System Update. build 202112070452 - Updates in website page design - Added website content template - Fixed system seeder error in seeding non-existing classes - Fixed issues with login view - Applied custom scrollbar functionality - Fixed footer display issues

--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -6,3 +6,23 @@
 /*@import url('https://cdn.jsdelivr.net/npm/@mdi/font@4.x/css/materialdesignicons.min.css');*/
 @import url('https://cdn.jsdelivr.net/npm/@mdi/font@5.x/css/materialdesignicons.min.css');
 
+/* Works on Firefox */
+* {
+    scrollbar-width: thin;
+    /*scrollbar-color: blue orange;*/
+}
+
+/* Works on Chrome, Edge, and Safari */
+*::-webkit-scrollbar {
+    width: 12px;
+}
+
+*::-webkit-scrollbar-track {
+    /*background: orange;*/
+}
+
+*::-webkit-scrollbar-thumb {
+    background-color: black;
+    border-radius: 20px;
+    border: 3px solid black;
+}
